--- a/Pages/Institucional.html
+++ b/Pages/Institucional.html
@@ -19,11 +19,11 @@
     <nav>
       <ul>
         <li class="list-items"><i class="fa-solid fa-house"></i><a href="../index.html">Home</a></li>
-        <li class="list-items"><i class="fa-solid fa-building-columns"></i><a href="./Institucional.html">Institucional </a></li>     
-        <li class="list-items"><i class="fa-solid fa-building"></i><a href="./departamentos.html" >Departamentos</a></li>     
-        <li class="list-items"><i class="fa-solid fa-graduation-cap"></i><a href="./cursos.html">Cursos</a></li>       
-        <li class="list-items"><i class="fa-solid fa-envelope"></i><a href="./sobreNosotros.html">Contacto</a></li> 
-        <li class="list-items"><i class="fa-solid fa-user-group"></i><a href="./sobreNosotros.html">Sobre Nosotros</a></li> 
+        <li class="list-items"><i class="fa-solid fa-building-columns"></i><a href="../Institucional.html">Institucional </a></li>     
+        <li class="list-items"><i class="fa-solid fa-building"></i><a href="../departamentos.html" >Departamentos</a></li>     
+        <li class="list-items"><i class="fa-solid fa-graduation-cap"></i><a href="../cursos.html">Cursos</a></li>       
+        <li class="list-items"><i class="fa-solid fa-envelope"></i><a href="../sobreNosotros.html">Contacto</a></li> 
+        <li class="list-items"><i class="fa-solid fa-user-group"></i><a href="../sobreNosotros.html">Sobre Nosotros</a></li> 
         <li class="list-items"><i class="fa-solid fa-location-pin"></i><a href="https://sociedad-cientifica-de-medicina.negocio.site/?utm_source=gmb&utm_medium=referral" target="_blank">Visita</a>
       </ul>
       <div class="header_logo logo-institucional">
