--- a/Pages/cursos.html
+++ b/Pages/cursos.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CursosCiips</title>
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="preconnect" href="./https://fonts.googleapis.com">
-    <link rel="preconnect" href="./https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-      
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body class="fondoCursos">
@@ -19,12 +18,12 @@
         <nav>
           <ul>
             <li class="list-items"><i class="fa-solid fa-house"></i><a href="../index.html">Home</a></li>
-            <li class="list-items"><i class="fa-solid fa-building-columns"></i><a href="./Institucional.html">Institucional </a></li>
-            <li class="list-items"><i class="fa-solid fa-building"></i><a href="./departamentos.html" >Departamentos</a></li>
-            <li class="list-items"><i class="fa-solid fa-graduation-cap"></i><a href="./cursos.html">Cursos</a></li>       
-            <li class="list-items"><i class="fa-solid fa-envelope"></i><a href="./contacto.html">Contacto</a></li> 
-            <li class="list-items"><i class="fa-solid fa-user-group"></i><a href="./sobreNosotros.html">Sobre nosotros</a></li> 
-            <li class="list-items"><i class="fa-solid fa-location-pin"></i>   </i><a href="https://sociedad-cientifica-de-medicina.negocio.site/?utm_source=gmb&utm_medium=referral" target="_blank">Visita</a>
+            <li class="list-items"><i class="fa-solid fa-building-columns"></i><a href="../Pages/Institucional.html">Institucional </a></li>
+            <li class="list-items"><i class="fa-solid fa-building"></i><a href="../departamentos.html" >Departamentos</a></li>
+            <li class="list-items"><i class="fa-solid fa-graduation-cap"></i><a href="../cursos.html">Cursos</a></li>       
+            <li class="list-items"><i class="fa-solid fa-envelope"></i><a href="../contacto.html">Contacto</a></li> 
+            <li class="list-items"><i class="fa-solid fa-user-group"></i><a href="../sobreNosotros.html">Sobre nosotros</a></li> 
+            <li class="list-items"><i class="fa-solid fa-location-pin"></i><a href="https://sociedad-cientifica-de-medicina.negocio.site/?utm_source=gmb&utm_medium=referral" target="_blank">Visita</a>
           </ul>
           <div class="header_logo">
             <img src="../Imagenes/CIPS_logo.jpg"  alt="logo"  >
