--- a/Pages/sobreNosotros.html
+++ b/Pages/sobreNosotros.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sobreNosotros</title>
-    <link rel="preconnect" href="./https://fonts.googleapis.com">
-    <link rel="preconnect" href="./https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
@@ -19,11 +19,11 @@
       <nav class="navbar-sobreN">
       <ul>
         <li class="list-items"><i class="fa-solid fa-house"></i><a href="../index.html">Home</a></li>
-        <li class="list-items"><i class="fa-solid fa-building-columns"></i><a href="./Institucional.html">Institucional </a></li>     
-        <li class="list-items"><i class="fa-solid fa-building"></i><a href="./departamentos.html" >Departamentos</a></li>     
-        <li class="list-items"><i class="fa-solid fa-graduation-cap"></i><a href="./cursos.html">Cursos</a></li>       
-        <li class="list-items"><i class="fa-solid fa-envelope"></i><a href="./contacto.html">Contacto</a></li> 
-        <li class="list-items"><i class="fa-solid fa-user-group"></i><a href="./sobreNosotros.html">Sobre Nosotros</a></li> 
+        <li class="list-items"><i class="fa-solid fa-building-columns"></i><a href="../Institucional.html">Institucional </a></li>     
+        <li class="list-items"><i class="fa-solid fa-building"></i><a href="../departamentos.html" >Departamentos</a></li>     
+        <li class="list-items"><i class="fa-solid fa-graduation-cap"></i><a href="../cursos.html">Cursos</a></li>       
+        <li class="list-items"><i class="fa-solid fa-envelope"></i><a href="../contacto.html">Contacto</a></li> 
+        <li class="list-items"><i class="fa-solid fa-user-group"></i><a href="../sobreNosotros.html">Sobre Nosotros</a></li> 
         <li class="list-items"><i class="fa-solid fa-location-pin"></i><a href="https://sociedad-cientifica-de-medicina.negocio.site/?utm_source=gmb&utm_medium=referral" target="_blank">Visita</a>
       </ul>
       
