--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -18,11 +18,11 @@
         
         <ul>
           <li class="list-items"><i class="fa-solid fa-house"></i><a href="../index.html">Home</a></li>
-          <li class="list-items"><i class="fa-solid fa-building-columns"></i><a href="../Pages/Institucional.html">Institucional </a></li>     
-          <li class="list-items"><i class="fa-solid fa-building"></i><a href="../departamentos.html" >Departamentos</a></li>     
-          <li class="list-items"><i class="fa-solid fa-graduation-cap"></i><a href="../cursos.html">Cursos</a></li>       
-          <li class="list-items"><i class="fa-solid fa-envelope"></i><a href="../contacto.html">Contacto</a></li> 
-          <li class="list-items"><i class="fa-solid fa-user-group"></i><a href="../sobreNosotros.html">Sobre Nosotros</a></li> 
+          <li class="list-items"><i class="fa-solid fa-building-columns"></i><a href="./Pages/Institucional.html">Institucional </a></li>     
+          <li class="list-items"><i class="fa-solid fa-building"></i><a href="./departamentos.html" >Departamentos</a></li>     
+          <li class="list-items"><i class="fa-solid fa-graduation-cap"></i><a href="./cursos.html">Cursos</a></li>       
+          <li class="list-items"><i class="fa-solid fa-envelope"></i><a href="./contacto.html">Contacto</a></li> 
+          <li class="list-items"><i class="fa-solid fa-user-group"></i><a href="./sobreNosotros.html">Sobre Nosotros</a></li> 
           <li class="list-items"><i class="fa-solid fa-location-pin"></i></i><a href="https://sociedad-cientifica-de-medicina.negocio.site/?utm_source=gmb&utm_medium=referral" target="_blank">Visita</a>
         </ul>
 
