--- a/Pages/cursos.html
+++ b/Pages/cursos.html
@@ -18,7 +18,7 @@
         <nav>
           <ul>
             <li class="list-items"><i class="fa-solid fa-house"></i><a href="../index.html">Home</a></li>
-            <li class="list-items"><i class="fa-solid fa-building-columns"></i><a href="./Pages/Institucional.html">Institucional </a></li>
+            <li class="list-items"><i class="fa-solid fa-building-columns"></i><a href="./Institucional.html">Institucional </a></li>
             <li class="list-items"><i class="fa-solid fa-building"></i><a href="./departamentos.html" >Departamentos</a></li>
             <li class="list-items"><i class="fa-solid fa-graduation-cap"></i><a href="./cursos.html">Cursos</a></li>       
             <li class="list-items"><i class="fa-solid fa-envelope"></i><a href="./contacto.html">Contacto</a></li> 
